Some change in all games

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ bin
 .factorypath
 **/.build
 **/build
+app/build/tmp/compileJava/compileTransaction/stash-dir/Progression.class.uniqueId1
+app/build/tmp/compileJava/compileTransaction/stash-dir/Progression.class.uniqueId1
+app/.gradle/8.5/executionHistory/executionHistory.bin
+app/build/tmp/compileJava/previous-compilation-data.bin
